--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,15 +1,11 @@
 <div class="container__small-card">
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <img
-      src="https://uploads.jovemnerd.com.br/wp-content/uploads/2022/09/jujutsu_kaisen_temporada_2__r0so03b2j-1210x544.jpg"
-      alt=""
-      srcset=""
-      >
+      <img src="{{photoCover}}" alt="" srcset="">
     </div>
 
     <div class="small-card__title">
-     <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+     <h1><a href="#"></a>{{cardTitle}}</h1>
     </div>
   </div>
 
