--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,11 @@
 
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
 
 <app-menu-title></app-menu-title>
 <div class="container__articles" >
   <div class="articles__main">
-      <app-big-card photoCover="https://cdn.folhape.com.br/upload/dn_arquivo/2022/07/whatsapp-image-2022-07-06-at-161114.jpg"
+      <app-big-card
+      Id="1"
+      photoCover="https://cdn.folhape.com.br/upload/dn_arquivo/2022/07/whatsapp-image-2022-07-06-at-161114.jpg"
       cardTitle="GOD OF WAR RAGNAROK"
       cardDescript="Santa Monica anuncia uma continuação do god of war ragnarol, será que vai se contar a historia do Atreus ou do Kleitinho ?"
       ></app-big-card>
@@ -14,17 +13,20 @@
 
   <div class="articles__others">
     <app-small-card
+      Id="2"
       cardTitle="Satoru Gojo realmente é o personagem mais forte do anime jujutsu Kaisen? "
       photoCover="https://uploads.jovemnerd.com.br/wp-content/uploads/2022/09/jujutsu_kaisen_temporada_2__r0so03b2j-1210x544.jpg"
     ></app-small-card>
 
     <app-small-card
+      Id="3"
       cardTitle="Como Ryomen Sukuna, matou Satoru Gojo? foi de F "
       photoCover="https://i0.wp.com/teamcomics.com.br/wp-content/uploads/2023/09/Design-sem-nome.png?fit=1280%2C720&ssl=1"
     ></app-small-card>
 
     <app-small-card
-      cardTitle="Em um Duelo entre Kratos, vugo kleitin contra sukuna quem venceria ? "
+      Id="4"
+      cardTitle="Em um Duelo entre Kratos, vulgo kleitin contra Sukuna quem venceria ? "
       photoCover="https://i.ytimg.com/vi/lCT0nKll15s/maxresdefault.jpg"
     ></app-small-card>
   </div>
